--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/dashboard.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/dashboard.html
@@ -5,13 +5,67 @@
 
 <div class="content">
     <h1>Dashboard</h1>
-    <div class="card">
-        <div class="card-body">
-          <h4 class="card-title">Welcome to the Silver Horizons Payroll App, {{user.username}}!</h4>
-          <!--p class="card-text">What would you like to do today?</p-->
-        </div>
+    <div class="card px-3 py-3">
+      <h1>Welcome to the Silver Horizons Payroll App, {{user.username}}!</h1>
+      <p class="card-text"><small class="text-muted">What would you like to do today?</small></p>
     </div>
-
+    <hr>
+    <div class="card px-4 py-4">
+      <h5>At a glace...</h5>
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-body">
+            <h1><i class="lni lni-user"></i></h1>
+            <h3>10</h3>
+            <p class="card-text">Number of Employees</p>
+            <!--p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p-->
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h1><i class="lni lni-ticket-alt"></i></h1>
+            <h3>10</h3>
+            <p class="card-text">Payrolls Processed</p>
+            <!--p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></-->
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h1><i class="lni lni-hourglass"></i></h1>
+            <h3>10</h3>
+            <p class="card-text">Days Until Payroll Deadline</p>
+            <!--p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p-->
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h1><i class="lni lni-postcard"></i></h1>
+            <h1 class="card-title">15</h1>
+            <p class="card-text">HMOs to File</p>
+            <!--p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p-->
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card my-4 px-4 py-4">
+      <h5>Recent Files/Actvities</h5>
+      <div style="overflow-x:auto;">
+        <table id="posts">
+            <thead>
+                <tr>
+                    <th style="width:20%">File Name</th>
+                    <th style="width:5%">Date Created</th>
+                    <th style="width:5%">View</th>
+            <tbody>
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    </div>
 </div>
 
 
