--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
@@ -83,45 +83,30 @@
                 <tr>
                     <th style="width:5%">ID</th>
                     <th style="width:15%">Employee Name</th>
-                    <th style="width:10%">Basic Pay</th>
-                    <th style="width:10%">Daily Rate</th>
-                    <th style="width:10%">Gross Compensation</th>
-                    <th style="width:10%">Total Deductions</th>
+                    <th style="width:15%">Payoll Period</th>
+                    <!--th style="width:10%">Basic Pay</th-->
+                    <!--th style="width:10%">Total Deductions</th-->
                     <th style="width:10%">Net Pay</th>
                     <th style="width:8%">Options</th>
 
                 </tr>
             </thead>
-            {% for i in a %}
+            
             <tbody>
+                {% for i in payslip %}
                 <tr>
-                    <td>ABC028</td>
-                    <td><a href="#">Payslip not yet generated, can edit</a></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>{{i.Employee_ID}}</td>
+                    <td>{{i.Last_name}}, {{i.First_name}} {{i.Middle_name}}</td>
+                    <td>{{i.Start_Date}} - {{i.End_Date}}</td>
+                    <!--td></td-->
+                    <!--td>{{i.Total_Deductions}}</td-->
+                    <td>{{i.Net_Pay}}</td>
                     <td class="form-row">
-                        <a class="btn form-group" href="{% url 'payroll_breakdown' UID=user.pk  EID="sra001"%}"><i class="lni lni-pencil-alt"></i></a>
+                        <a class="btn" href="{% url 'payroll_breakdown' UID=user.pk  TID=i.Transaction_ID %}"><i class="lni lni-pencil-alt"></i></a>
                     </td>
                 </tr>
-                <tr>
-                    <tr>
-                        <td>{{a.id_number}}</td>
-                        <td>{{a.Last_name}}, {{a.First_name}} {{a.Middle_name}}</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td class="form-row">
-                            <a class="btn form-group mx-1" href="#"><i class="lni lni-eye"></i></a>
-                        </td>
-                    </tr>
-                </tr>
+                {% endfor %}
             </tbody>
-            {% endfor %}
         </table>
     </div>
 
