--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_info.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_info.html
@@ -33,7 +33,7 @@
           </div>
           <div class="form-group col-md-6">
             <label for="inputPhone">Phone Number</label>
-            <input type="number" class="form-control" id="inputPhone" name="inputPhone" value="{{a.Phone_Number}}">
+            <input type="tel" class="form-control" id="inputPhone" name="inputPhone" placeholder='09XX-XXX-XXXX' pattern="[0-9]{4}-[0-9]{3}-[0-9]{4}" value="{{a.Phone_Number}}" required>
           </div>
           <div class="form-group col-md-6">
             <label for="inputEmail4">Email</label>
@@ -84,7 +84,7 @@
         <div class="form-row">
             <div class="form-group col-md-4">
                 <label for="inputBankAccNo">Bank Account Number</label>
-                <input type="number" class="form-control" id="inputBankAccNo" name="inputBankAccNo" value="{{a.BankNumber}}">
+                <input type="number" class="form-control" id="inputBankAccNo" name="inputBankAccNo" placeholder="" min='0' minlength='8' maxlength='10' value="{{a.BankNumber}}" required>
             </div>
             <div class="form-group col-md-4">
                 <label for="inputSalary">Salary</label>
