--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/attendance_db.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/attendance_db.html
@@ -64,7 +64,7 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td><a class="btn" href="{% url 'employee_attendance' UID=user.pk %}"><i class="lni lni-pencil-alt"></i></a></td>
+                        <td><a class="btn" href="#"><i class="lni lni-pencil-alt"></i></a></td-->
                     </tr>
                 </tbody>
             </table>
