--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/dashboard.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/dashboard.html
@@ -16,7 +16,7 @@
         <div class="card">
           <div class="card-body">
             <h1><i class="lni lni-user"></i></h1>
-            <h3>10</h3>
+            <h3>{{count_emp}}</h3>
             <p class="card-text">Number of Employees</p>
             <!--p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p-->
           </div>
@@ -24,7 +24,7 @@
         <div class="card">
           <div class="card-body">
             <h1><i class="lni lni-ticket-alt"></i></h1>
-            <h3>10</h3>
+            <h3>{{count_payrolls}}</h3>
             <p class="card-text">Payrolls Processed</p>
             <!--p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></-->
           </div>
@@ -33,14 +33,14 @@
           <div class="card-body">
             <h1><i class="lni lni-hourglass"></i></h1>
             <h3>10</h3>
-            <p class="card-text">Days Until Payroll Deadline</p>
+            <p class="card-text">Days Until Next Payroll Deadline</p>
             <!--p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p-->
           </div>
         </div>
         <div class="card">
           <div class="card-body">
             <h1><i class="lni lni-postcard"></i></h1>
-            <h1 class="card-title">15</h1>
+            <h1 class="card-title">{{count_hmo}}</h1>
             <p class="card-text">HMOs to File</p>
             <!--p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p-->
           </div>
