--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_info.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_info.html
@@ -8,7 +8,7 @@
     <div class="form-row"> 
         <h2 class="form-group col-md-6" > View Employee Record </h1>
         <div class="action-icons col-md-6">
-            <a class="btn btn-info form-group" href="{% url 'employee_attendance' UID=user.pk %}"> View Attendance </a>
+            <a class="btn btn-info form-group" href="{% url 'employee_attendance' UID=user.pk EID=a.pk %}"> View Attendance </a>
             <!--button class="btn btn-primary form-group" type="button"> Edit Record</button-->
         </div>
     </div>
