--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/reset_pw.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/reset_pw.html
@@ -39,7 +39,7 @@
                             placeholder="Enter ID Number" required>
                     </div>
                     <div class="text-center">
-                        <button class="btn my-2 btn-primary" type="submit">Reset</button>
+                        <button class="btn my-2 btn-primary btn-block" type="submit">Reset</button>
                         <p><a href="{% url 'login' %}" style="color:#861D1A"> Back to Login </a></p>
                     </div>
                 </form>
