--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/add_employee.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/add_employee.html
@@ -8,14 +8,21 @@
 
 <div class="content">
     {% if messages %}
-    <div class="card">
-        <div class="card-header">
-            {% for message in messages %}
-            <p{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
-            {% endfor %}
-        </div>
-    </div>
-    </br>
+      {% for message in messages %}
+      
+      {% if messages.tags == 'success' %}
+      <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <strong>Success!</strong> {{ message }}
+      </div>
+      {% endif %}
+
+      {% if messages.tags == 'error' %}
+      <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <strong>Error!</strong> {{ message }}
+      </div>
+      {% endif %}
+
+      {% endfor %}
     {% endif %}
     <form method="POST" action="#">{% csrf_token %}
         <h1> Create Employee Record </h1><hr>
@@ -23,11 +30,11 @@
         <div class="form-row">
           <div class="form-group col-md-4">
             <label for="inputFstName">First Name</label>
-            <input type="text" class="form-control" id="inputFstName" name="inputFstName" placeholder="" required>
+            <input type="text" class="form-control" id="inputFstName" name="inputFstName" placeholder="" required >
           </div>
           <div class="form-group col-md-4">
             <label for="inputMidName">Middle Name</label>
-            <input type="text" class="form-control" id="inputMidName" name="inputMidName" placeholder="" required>
+            <input type="text" class="form-control" id="inputMidName" name="inputMidName" placeholder="" required >
           </div>
           <div class="form-group col-md-4">
             <label for="inputLtName">Last Name</label>
@@ -35,7 +42,7 @@
           </div>
           <div class="form-group col-md-6">
             <label for="inputPhone">Phone Number</label>
-            <input type="tel" class="form-control" id="inputPhone" name="inputPhone" placeholder='09XX-XXX-XXXX' pattern="[0-9]{4}-[0-9]{3}-[0-9]{4}" required>
+            <input type="number" class="form-control" id="inputPhone" name="inputPhone" step="1" placeholder="XXXX-XXX-XXXX">
           </div>
           <div class="form-group col-md-6">
             <label for="inputEmail4">Email</label>
@@ -57,6 +64,7 @@
             <div class="form-group col-md-3">
                 <label for="inputEmpStat">Contract Status</label>
                 <select id="inputEmpStat" name="inputEmpStat" class="form-control">
+                  <option selected>Choose Status</option>
                   <option value="Hired">Hired</option>
                   <option value="Terminated">Terminated</option>
                   <option value="On Leave">On Leave</option>
@@ -65,6 +73,7 @@
             <div class="form-group col-md-3">
                 <label for="inputDept">Department</label>
                 <select id="inputDept" name="inputDept" class="form-control">
+                  <option selected>Choose Department</option>
                   <option value="HR">HR</option>
                   <option value="IT">IT</option>
                   <option value="Sales">Sales</option>
@@ -83,11 +92,11 @@
         <div class="form-row">
             <div class="form-group col-md-4">
                 <label for="inputBankAccNo">Bank Account Number</label>
-                <input type="number" class="form-control" id="inputBankAccNo" name="inputBankAccNo" placeholder="" min='0' minlength='8' maxlength='10' required>
+                <input type="text" class="form-control" id="inputBankAccNo" name="inputBankAccNo" placeholder="">
             </div>
             <div class="form-group col-md-4">
                 <label for="inputSalary">Salary</label>
-                <input type="number" step="0.01" class="form-control" id="inputSalary" name="inputSalary" placeholder="" min='11814.00' required>
+                <input type="number" step="0.01" class="form-control" id="inputSalary" name="inputSalary" placeholder="">
             </div>
         </div>
         <hr>
@@ -107,4 +116,15 @@
     </div>
   </div>
 </footer>
+
+
+<!--script>
+  $(document).ready(function() {
+    // Close alerts after 5 seconds
+    $(".alert").delay(5000).slideUp(200, function() {
+      $(this).alert('close');
+    });
+  });
+</script-->
+
 {% endblock %}
