--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_attendance.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_attendance.html
@@ -9,43 +9,50 @@
    <div class="form-row">
     <div class="form-group col-md-2">
         <label for="inputID">ID Number</label>
-        <input type="text" class="form-control" id="inputID" readonly>
+        <input type="text" class="form-control" id="inputID" value="{{a.id_number}}" readonly>
     </div>
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-5">
       <label for="inputFullName"> Name</label>
-      <input type="text" class="form-control" id="inputFullName" readonly>
+      <input type="text" class="form-control" id="inputFullName" value="{{a.getFullName}}" readonly>
     </div>
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-5">
         <label for="inputDept">Department</label>
-        <input type="text" class="form-control" id="inputDept" readonly>
+        <input type="text" class="form-control" id="inputDept" value="{{a.Department}}" readonly>
     </div>
-    <div class="form-group col-md-3">
+    <!--div class="form-group col-md-3">
         <label for="mth_yr">Month & Year</label>
         <input type="date" class="form-control" id="mth_yr">
-    </div>
+    </div-->
   </div>
   <div style="overflow-x:auto;">
     <table id="posts">
         <thead>
             <tr>
                 <th style="width:10%">Date</th>
-                <th style="width:20%">Attendance Status</th>
+                <!--th style="width:20%">Attendance Status</t-->
                 <th style="width:15%">Time In</th>
                 <th style="width:15%">Time Out</th>
                 <th style="width:15%">Overtime Hours</th>
             </tr>
         </thead>
         <tbody>
+            {% for x in attendance_record %}
             <tr>
-                <td>
-                </tr>
-                </td>
+                <td>{{x.Date}}</td>
+                <td>{{x.TimeIn}}</td>
+                <td>{{x.TimeOut_2}}</td>
+                <td>{{x.OT}}</td>
             </tr>
+            {% endfor %}
         </tbody>
     </table>
   </div>
 </div>
-
-</div>
-
+<footer>
+    <div class="footer-wrap">
+      <div class="back-button">
+          <a class="btn btn-dark mx-3" href="{% url 'employee_info' UID=user.pk EID=a.pk %}" type="button">Back</a>
+      </div>
+    </div>
+  </footer>
 {% endblock %}
