--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/encode_page.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/encode_page.html
@@ -9,8 +9,8 @@
             <div class="card-body">
                 <form method="POST" action="#">{% csrf_token %}
                 <div class="form-row">
-                    <div class="form-group col-md-10">
-                        <select id="inputDate" name="inputDate" class="form-control">
+                    <div class="form-group col-10">
+                        <select id="inputDate" name="inputDate" class="form-control custom-select mr-sm-2" required>
                             <option selected disabled="disabled">Choose Payroll Batch</option>
                             {% for y in z %}
                             <option value={{y|date:"Y-m-d"}}>{{y|date:"Y-m-d"}}</option>
@@ -18,7 +18,20 @@
                         </select>
                         <small id="inputDept" class="form-text text-muted">A Bank Payroll File can only be encoded if the payslips for the period have been successfully generated.</small> 
                     </div>
-                    <button class="btn btn-secondary form-group col-md-2" type="submit">Encode New Payroll</button>
+                    <div class="form-group col-2">
+                        <button class="btn btn-secondary btn-block" type="submit">Encode New Payroll</button>
+                    </div>
+
+                    <div>
+                        {% if messages %}
+                            {% for message in messages %}
+                                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                                    <strong>Success!</strong> {{ message }}
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+
+                    </div>
                 </div>
             </form>
                 <!--div class="alert alert-warning" role="alert">
