--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/payroll_breakdown.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/payroll_breakdown.html
@@ -5,7 +5,12 @@
 {% block content %}
 
 <div class="content">
-    <h1> Employee Payroll Breakdown </h1>
+    <div class="form-row">
+        <h2 class="form-group col-md-6" >Employee Payroll Breakdown </h2>
+        <div class="action-icons col-md-6">
+            <a class="btn btn-info form-group" href="{% url 'payslip' UID=user.pk TID=payrolls.Transaction_ID %}">Print Payslip</a>
+        </div>
+    </div>
     <hr>
     <div class="form-row">
         <div class="form-group col-md-2">
@@ -22,11 +27,11 @@
         </div>
         <div class="form-group col-md-2">
             <label for="start">Payroll Range Start Date</label>
-            <input type="date" class="form-control" id="start" value={{start}}readonly>
+            <input type="date" class="form-control" id="start" value={{start}} readonly>
         </div>
         <div class="form-group col-md-2">
             <label for="end">Payroll Range End Date</label>
-            <input type="date" class="form-control" id="end" value={{end}}readonly>
+            <input type="date" class="form-control" id="end" value={{end}} readonly>
         </div>
     </div>
     <div style="overflow-x:auto;">
@@ -35,7 +40,7 @@
                 <tr>
                     <th style="width:10%">Basic Pay</th>
                     <th style="width:10%"> Daily Rate</th>
-                    <th style="width:10%">COLA & Others</th>
+                    <th style="width:10%">COLA & Additional Earnings</th>
                     <th style="width:11%">GROSS COMPENSATION</th>
                 </tr>
             </thead>
@@ -49,10 +54,10 @@
                     </td>
                     
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.AddtlEarning_Rate_ID.ADD_EARNINGS|add:payrolls.COLA_Rate_ID.COLA_Amount|add:payrolls.OT|add:payrolls.Holiday_Comp }} readonly>
+                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.AddtlEarning_Rate_ID.ADD_EARNINGS|add:payrolls.COLA_Rate_ID.COLA_Amount|add:payrolls.OT|add:payrolls.Holiday_Comp}} readonly>
                     </td>
                     <td>
-                        <input type="float" class="form-control" id="mth_yr" value={{payrolls.Net_pay}} readonly>
+                        <input type="float" class="form-control" id="mth_yr" value="{{payrolls.Net_Pay|add:payrolls.Total_Deductions}}" readonly>
                     </td>
                 </tr>
             </tbody>
@@ -94,11 +99,20 @@
                     </td>
                 </tr>
             </tbody>
+        </table>
+        <table id="posts">
             <thead>
                 <tr>
-                    <th style="width:10%">Total Net Pay</th>
+                    <th style="width:10%">TOTAL NET PAY</th>
                 </tr>
             </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        {{payrolls.Net_Pay}}
+                    </td><!--input type="float" class="form-control" id="mth_yr" value={{payrolls.Net_pay}} readonly-->
+                </tr>
+            </tbody>
         </table>
     </div>
 </div>
@@ -108,6 +122,6 @@
           <a class="btn btn-dark mx-3" href="{% url 'generate_page' UID=user.pk %}" type="button">Back</a>
       </div>
     </div>
-  </footer>
+</footer>
 
 {% endblock %}
