--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_info.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_info.html
@@ -14,7 +14,10 @@
     </div>
     <hr>
     {% for message in messages %}
-            <p{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
+          <!--p class="{{ message.tags }}">{{ message }}</p-->
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+          <strong>Success!</strong> {{ message }}
+        </div>
     {% endfor %}
     <form method="POST" action="#">{% csrf_token %}
         <h5> Personal Details </h5>
